Bug 310260 - Display sort sequences not maintained between executions of KMyMoney
Summary: Display sort sequences not maintained between executions of KMyMoney
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-17 21:14 UTC by David Houlden
Modified: 2012-11-21 19:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2012-11-17 21:14:34 UTC
There are a few places where the display sort sequence is not as I would like it and although I can change the sequence it is not saved when I restart KMyMoney.
1. Investments - Equities tab. Sorts by name descending. I would prefer ascending.
2. Investments - Securities tab. Displays unsorted. I would prefer name ascending.
3. Tools menu - Prices. Sorts by Commodity descending. I would prefer name or commodity ascending.
4. Tools menu - Update Stock and Currency Prices. Sorts by symbol descending. I would prefer symbol or name ascending.

Reproducible: Always



Expected Results:  
Sort sequences should be changeable and saved between executions of KMyMoney
Comment 1 Cristian Oneț 2012-11-21 19:08:40 UTC
Git commit 7c972b7b2bc05f00fe8f3e03b3d7ef0570d20a66 by Cristian Oneț.
Committed on 21/11/2012 at 20:04.
Pushed by conet into branch 'master'.

Save the header state in the investment view's lists.

Since pretty much all the bigger item views in KMyMoney have a persistent header state make the investment view's lists behave in the same way.
Fix the default sorting order in the 'Prices' and 'Update prices' dialogs since those are stand alone they don't have a persistent header state yet
because they don't even have a persistent size.

M  +1    -0    kmymoney/dialogs/kequitypriceupdatedlg.cpp
M  +1    -0    kmymoney/dialogs/kmymoneypricedlg.cpp
M  +22   -18   kmymoney/views/kinvestmentview.cpp

http://commits.kde.org/kmymoney/7c972b7b2bc05f00fe8f3e03b3d7ef0570d20a66
Comment 2 Cristian Oneț 2012-11-21 19:09:21 UTC
Git commit d116fc872c0a6e3b0b4322fd26e884394cb4cc19 by Cristian Oneț.
Committed on 21/11/2012 at 20:04.
Pushed by conet into branch '4.6'.

Save the header state in the investment view's lists.

Since pretty much all the bigger item views in KMyMoney have a persistent header state make the investment view's lists behave in the same way.
Fix the default sorting order in the 'Prices' and 'Update prices' dialogs since those are stand alone they don't have a persistent header state yet
because they don't even have a persistent size.
(cherry picked from commit 7c972b7b2bc05f00fe8f3e03b3d7ef0570d20a66)

M  +1    -0    kmymoney/dialogs/kequitypriceupdatedlg.cpp
M  +1    -0    kmymoney/dialogs/kmymoneypricedlg.cpp
M  +22   -18   kmymoney/views/kinvestmentview.cpp

http://commits.kde.org/kmymoney/d116fc872c0a6e3b0b4322fd26e884394cb4cc19