Save the header state in the investment view's lists.

Since pretty much all the bigger item views in KMyMoney have a persistent header state make the investment view's lists behave in the same way.
Fix the default sorting order in the 'Prices' and 'Update prices' dialogs since those are stand alone they don't have a persistent header state yet
because they don't even have a persistent size.

BUG: 310260